@@ -82,7 +82,7 @@ from distutils.core import Extension, setup
 from setupext import build_agg, build_gtkagg, build_tkagg, build_wxagg,\
      build_ft2font, build_image, build_windowing, build_transforms, \
      build_contour, build_nxutils, build_enthought, build_swigagg, build_gdk, \
-     build_subprocess, build_isnan, build_ttconv
+     build_subprocess, build_ttconv
 import distutils.sysconfig
 
 for line in file('lib/matplotlib/__init__.py').readlines():
@@ -155,8 +155,6 @@ if not havesubprocess:
     packages.append('subprocess')
     if sys.platform == 'win32':
         build_subprocess(ext_modules, packages)
-
-build_isnan(ext_modules, packages)
 
 try: import datetime
 except ImportError: havedate = False
