@@ -23,7 +23,6 @@
 #include "_backend_agg.h"
 #include "_transforms.h"
 #include "mplutils.h"
-#include "MPL_isnan.h"
 
 #include "swig_runtime.h"
 
@@ -35,6 +34,7 @@
 #else
 #define PY_ARRAY_TYPES_PREFIX NumPy
 #include "numpy/arrayobject.h"
+#include "numpy/ufuncobject.h"
 #endif
 #endif
 
@@ -1592,7 +1592,7 @@ RendererAgg::draw_lines(const Py::Tuple& args) {
         moveto = true;
         continue;
       }
-      if (MPL_isnan64(thisx) || MPL_isnan64(thisy)) {
+      if (isnan(thisx) || isnan(thisy)) {
         moveto = true;
         continue;
       }
